# newsgraph

./: .env.example  .gitignore  DECISIONS.md  Dockerfile  README.md  pyproject.toml  render.yaml
evals/: README.md  run_eval.py
evals/cassettes/: gold.json
evals/gold/: articles.json
src/newsgraph/: cli.py  config.py  pipeline.py
src/newsgraph/api/: _layout.py  app.py  graph_view.py  people_view.py
src/newsgraph/db/: repository.py  schema.sql
src/newsgraph/extraction/: extractor.py  prompts.py
src/newsgraph/models/: api.py  extraction.py
src/newsgraph/resolution/: resolver.py
src/newsgraph/scraping/: base.py  http_client.py  techcrunch.py
tests/: conftest.py  test_api.py  test_merge.py  test_providers.py  test_resolver.py  test_techcrunch_adapter.py
tests/fixtures/: techcrunch_article_who_trusts_sam_altman.html  techcrunch_tag_openai.html
